[package]
name = "runeblood_ascension"
version = "1.0.1"
edition = "2024"
description = "Elden Ring mod that permanently enables Great Rune effect"
authors = ["Charlie's Boyfriend [ReinhardTristanHeydrich]"]
#license =
repository = "https://github.com/ReinhardTristanHeydrich/Runeblood-Ascension"

[lib]
crate-type = ["cdylib"]

[dependencies]
eldenring = "0.10.0"
eldenring-util = "0.10.0"