[package]
name = "tear-of-unyielding-breath"
version = "1.0.0"
edition = "2024"
description = "Infinite Stamina Mod for Elden Ring [Sekiro like stamina]"
authors = ["Charlie's Boyfriend [ReinhardTristanHeydrich]"]
#license =
repository = "https://github.com/ReinhardTristanHeydrich/Tear-of-Unyielding-Breath"

[lib]
crate-type = ["cdylib"]

[dependencies]
eldenring = "0.10.0"
eldenring-util = "0.10.0"